--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -12,10 +13,10 @@
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
-      </div>
+    <div class="task-row-wrapper">
+      <input id="new-task" class="task" type="text">
+      <button>Add</button>
+    </div>
     </p>
     <h3>Todo</h3>
     <ul id="incompleteTasks">
