--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  </header>
+  <main class="main">
+    <div id="add-task">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
       <input id="new-task" class="task" type="text">
       <button>Add</button>
     </div>
-    </p>
+  </div>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li>
@@ -51,7 +51,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
